<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_point"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/story_desc"
                android:scaleType="fitCenter"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_point_name"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/point_name" />

        <TextView
            android:id="@+id/tv_point_user"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_point_name"
            tools:text="@string/point_user" />

        <TextView
            android:id="@+id/tv_point_status"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_point_user"
            tools:text="@string/point_status" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_image"
            app:layout_constraintTop_toBottomOf="@id/tv_point_status">

            <TextView
                android:id="@+id/tv_point_lat"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                tools:text="@string/lat_value" />

            <TextView
                android:id="@+id/tv_point_lng"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                tools:text="@string/lon_value" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
