<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            android:src="@drawable/person_researching_stem_concepts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_login"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_username"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/ed_login_username"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />

        <uin.suka.status.sungai.ui.components.EmailEditText
            android:id="@+id/ed_login_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_password"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:labelFor="@+id/ed_login_password"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_login_username" />

        <uin.suka.status.sungai.ui.components.PasswordEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="12dp"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_dialog" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_register"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text_button" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/dicoding"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>